fixed index pg alignment and profile img size

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -19,7 +19,12 @@ body {
 
 
 .profile-img {
+  height: 400px;
   width: 400px;
-  height: auto;
+  object-fit: cover;
 }
 
+.artist-index-card {
+  margin-bottom: 30px;
+  overflow: hidden;
+}
